- Added PipelineFactories for MessageHandlers and Queries. - Added implicit type conversion between key delegates and interface types.

--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -115,11 +115,17 @@
     <Compile Include="Server\FuncDecorator.T2.cs" />
     <Compile Include="Server\IAggregateVersion.T1.cs" />
     <Compile Include="Server\DateTimeVersion.cs" />
+    <Compile Include="Server\IMessageHandlerPipelineFactory.T1.cs" />
     <Compile Include="Server\IMessageProcessorBusConnection.cs" />
     <Compile Include="Server\Int64Version.cs" />
     <Compile Include="Server\IQuery.T2.cs" />
+    <Compile Include="Server\IQueryPipelineFactory.T2.cs" />
+    <Compile Include="Server\MessageHandlerPipelineFactory.T1.cs" />
+    <Compile Include="Server\MessageHandlerPipelineFactoryDecorator.T1.cs" />
     <Compile Include="Server\PassThroughPipeline.T1.cs" />
     <Compile Include="Server\MessageValidationPipeline.cs" />
+    <Compile Include="Server\QueryPipelineFactory.T2.cs" />
+    <Compile Include="Server\QueryPipelineFactoryDecorator.T2.cs" />
     <Compile Include="Server\Repository.T3.cs" />
     <Compile Include="Server\Int32Version.cs" />
     <Compile Include="Server\DomainException.cs" />
