--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -68,11 +68,12 @@
     <Compile Include="IMessage.cs" />
     <Compile Include="IMessageValidator.T1.cs" />
     <Compile Include="IRequestMessage.cs" />
-    <Compile Include="IRequestMessage.T1.cs" />
     <Compile Include="IRequestMessageViewModel.cs" />
+    <Compile Include="IRequestMessageViewModel.T1.cs" />
     <Compile Include="ITransactionScope.cs" />
     <Compile Include="Message.T1.cs" />
     <Compile Include="MessageDeniedException.cs" />
+    <Compile Include="RequestMessage.T1.cs" />
     <Compile Include="RequestMessageAttachedCollection.T1.cs" />
     <Compile Include="FunctionalException.cs" />
     <Compile Include="ReadOnlyDictionary.T2.cs" />
