--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\MessageProcessor.UnitOfWork.Tests\packages.config" />
   <repository path="..\MessageProcessor.Unity.Tests\packages.config" />
   <repository path="..\MessageProcessor.Unity\packages.config" />
+  <repository path="..\Messaging.Client.WpfApplication\packages.config" />
   <repository path="..\Messaging.TestEngine.Tests\packages.config" />
   <repository path="..\Messaging.Tests\packages.config" />
   <repository path="..\Messaging.Unity.Tests\packages.config" />
