--- a/Messaging.Client.Tests/02.Messaging.Client.Tests.csproj
+++ b/Messaging.Client.Tests/02.Messaging.Client.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Client\DataVirtualization\IndexSetTest.cs" />
     <Compile Include="Client\DataVirtualization\VirtualCollectionPageLoaderSpy.cs" />
     <Compile Include="Client\DataVirtualization\VirtualCollectionPageLoaderTest.cs" />
+    <Compile Include="Client\DataVirtualization\VirtualCollectionSpy.cs" />
     <Compile Include="Client\DataVirtualization\VirtualCollectionTest.cs" />
     <Compile Include="Client\SynchronousContext.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
@@ -79,9 +80,9 @@
     <Compile Include="Client\RelayCommandOfT1.Test.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Messaging.Client\02.Messaging.Client.csproj">
+    <ProjectReference Include="..\Messaging.Client\03.Messaging.Client.csproj">
       <Project>{5bfa208f-ad26-4ca9-8b6a-0421f8dee286}</Project>
-      <Name>02.Messaging.Client</Name>
+      <Name>03.Messaging.Client</Name>
     </ProjectReference>
     <ProjectReference Include="..\Messaging\04.Messaging.csproj">
       <Project>{757d77d3-7b32-4f21-9617-88274d50b517}</Project>
