--- a/Messaging.Client/03.Messaging.Client.csproj
+++ b/Messaging.Client/03.Messaging.Client.csproj
@@ -59,7 +59,6 @@
     <Compile Include="Client\DataVirtualization\IVirtualCollectionItem.cs" />
     <Compile Include="Client\DataVirtualization\PageLoadedEventArgs.T1.cs" />
     <Compile Include="Client\DataVirtualization\PageFailedToLoadEventArgs.cs" />
-    <Compile Include="Client\DataVirtualization\IVirtualCollectionPageLoader.T1.cs" />
     <Compile Include="Client\DataVirtualization\ReadOnlyCollection.T1.cs" />
     <Compile Include="Client\DataVirtualization\VirtualCollection.T1.cs" />
     <Compile Include="Client\DataVirtualization\VirtualCollectionPageLoader.T1.cs" />
@@ -88,9 +87,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Messaging\04.Messaging.csproj">
+    <ProjectReference Include="..\Messaging\05.Messaging.csproj">
       <Project>{757d77d3-7b32-4f21-9617-88274d50b517}</Project>
-      <Name>04.Messaging</Name>
+      <Name>05.Messaging</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -105,7 +104,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>nuget pack "$(ProjectPath)" -Prop Configuration=Release -IncludeReferencedProjects -OutputDirectory "C:\Development\NuGet Packages"</PostBuildEvent>
+    <PostBuildEvent>nuget pack "$(ProjectPath)" -Prop Configuration=Release -IncludeReferencedProjects -OutputDirectory "D:\Development\NuGet Packages"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
