- Implementing missing methods on VirtualCollection<T> class. - Slightly edited look-and-feel of WpfSampleApplication.

--- a/Messaging.Client.WpfApplication/01.Messaging.Client.WpfApplication.csproj
+++ b/Messaging.Client.WpfApplication/01.Messaging.Client.WpfApplication.csproj
@@ -73,6 +73,7 @@
       <DependentUpon>ShellView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Shell\ShellViewModel.cs" />
+    <Compile Include="Shell\VirtualCollectionItemTemplateSelector.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppBootstrapper.cs" />
