- Moved all Domain-specific types into their own namespace.

--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Server\EventMonitor.cs" />
     <Compile Include="Client\QueryExecutionTask.cs" />
     <Compile Include="Client\AsyncExecutionTaskStatus.cs" />
-    <Compile Include="Server\AggregateNotFoundException.cs" />
+    <Compile Include="Server\Domain\AggregateNotFoundException.cs" />
     <Compile Include="Client\ExecutionCanceledEventArgs.cs" />
     <Compile Include="Client\ExecutionCompletedEventArgs.cs" />
     <Compile Include="Client\ExecutionFailedEventArgs.cs" />
@@ -108,34 +108,34 @@
     <Compile Include="Client\QueryDispatcher.T2.cs" />
     <Compile Include="Client\QueryDispatcherBase.T1.cs" />
     <Compile Include="Client\RequestDispatcher.cs" />
-    <Compile Include="Server\AggregateSet.T3.cs" />
-    <Compile Include="Server\EventBuffer.T3.cs" />
-    <Compile Include="Server\Aggregate.T2.cs" />
-    <Compile Include="Server\AggregateVersionTracker.T3.cs" />
+    <Compile Include="Server\Domain\AggregateSet.T3.cs" />
+    <Compile Include="Server\Domain\EventBuffer.T3.cs" />
+    <Compile Include="Server\Domain\Aggregate.T2.cs" />
+    <Compile Include="Server\Domain\AggregateVersionTracker.T3.cs" />
     <Compile Include="Server\FuncDecorator.T2.cs" />
-    <Compile Include="Server\IAggregateVersion.T1.cs" />
-    <Compile Include="Server\DateTimeVersion.cs" />
+    <Compile Include="Server\Domain\IAggregateVersion.T1.cs" />
+    <Compile Include="Server\Domain\DateTimeVersion.cs" />
     <Compile Include="Server\IMessageHandlerPipelineFactory.T1.cs" />
     <Compile Include="Server\IMessageProcessorBusConnection.cs" />
-    <Compile Include="Server\Int64Version.cs" />
+    <Compile Include="Server\Domain\Int64Version.cs" />
     <Compile Include="Server\IQuery.T2.cs" />
     <Compile Include="Server\IQueryPipelineFactory.T2.cs" />
     <Compile Include="Server\MessageHandlerPipelineFactory.T1.cs" />
     <Compile Include="Server\MessageHandlerPipelineFactoryDecorator.T1.cs" />
     <Compile Include="Server\PassThroughPipeline.T1.cs" />
-    <Compile Include="Server\MessageValidationPipeline.cs" />
+    <Compile Include="Server\MessageValidationPipeline.T1.cs" />
     <Compile Include="Server\QueryPipelineFactory.T2.cs" />
     <Compile Include="Server\QueryPipelineFactoryDecorator.T2.cs" />
-    <Compile Include="Server\Repository.T3.cs" />
-    <Compile Include="Server\Int32Version.cs" />
-    <Compile Include="Server\DomainException.cs" />
-    <Compile Include="Server\IAggregate.T2.cs" />
-    <Compile Include="Server\EventSourcedAggregate.T2.cs" />
-    <Compile Include="Server\IEventBuffer.T2.cs" />
-    <Compile Include="Server\IEventStream.T2.cs" />
-    <Compile Include="Server\IAggregateEvent.T2.cs" />
-    <Compile Include="Server\IWritableEventStream.T2.cs" />
-    <Compile Include="Server\MemoryEventStream.T2.cs" />
+    <Compile Include="Server\Domain\Repository.T3.cs" />
+    <Compile Include="Server\Domain\Int32Version.cs" />
+    <Compile Include="Server\Domain\DomainException.cs" />
+    <Compile Include="Server\Domain\IAggregate.T2.cs" />
+    <Compile Include="Server\Domain\EventSourcedAggregate.T2.cs" />
+    <Compile Include="Server\Domain\IEventBuffer.T2.cs" />
+    <Compile Include="Server\Domain\IEventStream.T2.cs" />
+    <Compile Include="Server\Domain\IAggregateEvent.T2.cs" />
+    <Compile Include="Server\Domain\IWritableEventStream.T2.cs" />
+    <Compile Include="Server\Domain\MemoryEventStream.T2.cs" />
     <Compile Include="Server\EventBuffer.T1.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="IConnection.cs" />
@@ -164,8 +164,8 @@
     <Compile Include="Server\BufferedEventBus.cs" />
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="Server\IEventBuffer.cs" />
-    <Compile Include="Server\IScopeSpecificCache.cs" />
-    <Compile Include="Server\IScopeSpecificCacheEntry.T1.cs" />
+    <Compile Include="Server\IDependencyCache.cs" />
+    <Compile Include="Server\IDependencCacheEntry.T1.cs" />
     <Compile Include="Server\IDomainEventBus.cs" />
     <Compile Include="IAsyncValidationService.cs" />
     <Compile Include="INotifyHasChanges.cs" />
