--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -78,6 +78,13 @@
     <Compile Include="ReadOnlyDictionary.T2.cs" />
     <Compile Include="RequestMessageViewModelEditScope.cs" />
     <Compile Include="Server\DependencyAttribute.cs" />
+    <Compile Include="Server\MessageHandler.T1.cs" />
+    <Compile Include="Server\Modules\MessageAttributeBasedModule.T2.cs" />
+    <Compile Include="Server\Modules\MessageHandlerPipelineModule.T1.cs" />
+    <Compile Include="Server\Modules\SingleAttributeBasedModule.T2.cs" />
+    <Compile Include="Server\Modules\TransactionScopeAttribute.cs" />
+    <Compile Include="Server\Modules\TransactionScopeFactory.cs" />
+    <Compile Include="Server\Modules\TransactionScopeModule.T1.cs" />
     <Compile Include="ValidationErrorTree.cs" />
     <Compile Include="RequestMessagePropertyChangedEventArgs.cs" />
     <Compile Include="Resources\ValidationMessages.Designer.cs">
@@ -115,17 +122,17 @@
     <Compile Include="Server\FuncDecorator.T2.cs" />
     <Compile Include="Server\Domain\IAggregateVersion.T1.cs" />
     <Compile Include="Server\Domain\DateTimeVersion.cs" />
-    <Compile Include="Server\IMessageHandlerPipelineFactory.T1.cs" />
+    <Compile Include="Server\Modules\IMessageHandlerPipelineFactory.T1.cs" />
     <Compile Include="Server\IMessageProcessorBusConnection.cs" />
     <Compile Include="Server\Domain\Int64Version.cs" />
     <Compile Include="Server\IQuery.T2.cs" />
-    <Compile Include="Server\IQueryPipelineFactory.T2.cs" />
-    <Compile Include="Server\MessageHandlerPipelineFactory.T1.cs" />
-    <Compile Include="Server\MessageHandlerPipelineFactoryDecorator.T1.cs" />
+    <Compile Include="Server\Modules\IQueryPipelineFactory.T2.cs" />
+    <Compile Include="Server\Modules\MessageHandlerPipelineFactory.T1.cs" />
+    <Compile Include="Server\Modules\MessageHandlerPipelineFactoryDecorator.T1.cs" />
     <Compile Include="Server\PassThroughPipeline.T1.cs" />
-    <Compile Include="Server\MessageValidationPipeline.T1.cs" />
-    <Compile Include="Server\QueryPipelineFactory.T2.cs" />
-    <Compile Include="Server\QueryPipelineFactoryDecorator.T2.cs" />
+    <Compile Include="Server\Modules\MessageValidationModule.T1.cs" />
+    <Compile Include="Server\Modules\QueryPipelineFactory.T2.cs" />
+    <Compile Include="Server\Modules\QueryPipelineFactoryDecorator.T2.cs" />
     <Compile Include="Server\Domain\Repository.T3.cs" />
     <Compile Include="Server\Domain\Int32Version.cs" />
     <Compile Include="Server\Domain\DomainException.cs" />
@@ -151,13 +158,13 @@
     <Compile Include="Server\MessageProcessorBus.cs" />
     <Compile Include="Server\MessageProcessorBusConnection.T1.cs" />
     <Compile Include="Server\MessagePointer.cs" />
-    <Compile Include="Server\ScopeSpecificCacheEntry.T1.cs" />
-    <Compile Include="Server\ScopeSpecificCacheRelay.cs" />
+    <Compile Include="Server\DependencyCacheEntry.T1.cs" />
+    <Compile Include="Server\DependencyCacheRelay.cs" />
     <Compile Include="Clock.cs" />
     <Compile Include="ClockScope.cs" />
     <Compile Include="ClockWithOffset.cs" />
     <Compile Include="IClockContext.cs" />
-    <Compile Include="Server\ThreadNamePipeline.T1.cs" />
+    <Compile Include="Server\Modules\ThreadNameModule.T1.cs" />
     <Compile Include="StaticClockContext.cs" />
     <Compile Include="StopwatchClock.cs" />
     <Compile Include="ThreadStaticClockContext.cs" />
@@ -182,7 +189,7 @@
     <Compile Include="Server\IUnitOfWork.cs" />
     <Compile Include="SystemClock.cs" />
     <Compile Include="Server\UnitOfWorkContext.cs" />
-    <Compile Include="Server\ScopeSpecificCache.cs" />
+    <Compile Include="Server\DependencyCache.cs" />
     <Compile Include="Server\UnitOfWorkScope.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
