- Implemented QueryCacheModule<,> and related classes. - Slightly altered pipeline customization methods.

--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -79,12 +79,21 @@
     <Compile Include="RequestMessageViewModelEditScope.cs" />
     <Compile Include="Server\DependencyAttribute.cs" />
     <Compile Include="Server\MessageHandler.T1.cs" />
-    <Compile Include="Server\Modules\MessageAttributeBasedModule.T2.cs" />
+    <Compile Include="Server\MessageSources.cs" />
+    <Compile Include="Server\Modules\IQueryCacheManager.cs" />
+    <Compile Include="Server\Modules\MessageDispatcherModule.T1.cs" />
+    <Compile Include="Server\Modules\MessageHandlerPipelineModule.T2.cs" />
     <Compile Include="Server\Modules\MessageHandlerPipelineModule.T1.cs" />
-    <Compile Include="Server\Modules\SingleAttributeBasedModule.T2.cs" />
+    <Compile Include="Server\Modules\QueryCacheKind.cs" />
+    <Compile Include="Server\Modules\QueryCacheOptionsAttribute.cs" />
+    <Compile Include="Server\Modules\QueryCacheModule.T2.cs" />
+    <Compile Include="Server\Modules\QueryDispatcherModule.T1.cs" />
+    <Compile Include="Server\Modules\QueryPipelineModule.T2.cs" />
+    <Compile Include="Server\Modules\QueryPipelineModule.T3.cs" />
     <Compile Include="Server\Modules\TransactionScopeAttribute.cs" />
     <Compile Include="Server\Modules\TransactionScopeFactory.cs" />
     <Compile Include="Server\Modules\TransactionScopeModule.T1.cs" />
+    <Compile Include="Server\Query.T2.cs" />
     <Compile Include="ValidationErrorTree.cs" />
     <Compile Include="RequestMessagePropertyChangedEventArgs.cs" />
     <Compile Include="Resources\ValidationMessages.Designer.cs">
