--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -82,14 +82,18 @@
     <Compile Include="Server\MessageSources.cs" />
     <Compile Include="Server\Modules\IQueryCacheManager.cs" />
     <Compile Include="Server\Modules\MessageDispatcherModule.T1.cs" />
-    <Compile Include="Server\Modules\MessageHandlerPipelineModule.T2.cs" />
-    <Compile Include="Server\Modules\MessageHandlerPipelineModule.T1.cs" />
+    <Compile Include="Server\Modules\MessageHandlerModuleAttribute.cs" />
+    <Compile Include="Server\Modules\MessageHandlerModule.T2.cs" />
+    <Compile Include="Server\Modules\MessageHandlerModule.T1.cs" />
+    <Compile Include="Server\Modules\ObjectCacheManager.cs" />
+    <Compile Include="Server\Modules\QueryCacheEntryMonitor.cs" />
     <Compile Include="Server\Modules\QueryCacheKind.cs" />
+    <Compile Include="Server\Modules\QueryCacheManager.cs" />
     <Compile Include="Server\Modules\QueryCacheOptionsAttribute.cs" />
     <Compile Include="Server\Modules\QueryCacheModule.T2.cs" />
     <Compile Include="Server\Modules\QueryDispatcherModule.T1.cs" />
-    <Compile Include="Server\Modules\QueryPipelineModule.T2.cs" />
-    <Compile Include="Server\Modules\QueryPipelineModule.T3.cs" />
+    <Compile Include="Server\Modules\QueryModule.T2.cs" />
+    <Compile Include="Server\Modules\QueryModule.T3.cs" />
     <Compile Include="Server\Modules\TransactionScopeAttribute.cs" />
     <Compile Include="Server\Modules\TransactionScopeFactory.cs" />
     <Compile Include="Server\Modules\TransactionScopeModule.T1.cs" />
@@ -106,7 +110,6 @@
     <Compile Include="Server\ActionDecorator.T1.cs" />
     <Compile Include="Server\CompositeConnection.cs" />
     <Compile Include="Server\DependencyClass.cs" />
-    <Compile Include="Server\EventMonitor.cs" />
     <Compile Include="Client\QueryExecutionTask.cs" />
     <Compile Include="Client\AsyncExecutionTaskStatus.cs" />
     <Compile Include="Server\Domain\AggregateNotFoundException.cs" />
