- Moved ObjectCacheManager-implementation into ObjectCacheInstance class for better SessionCache support and performance. - Renamed IQueryCacheManager to IQueryCacheController. - Implemented automatic garbage collection of empty caches.

--- a/Messaging.Tests/04.Messaging.Tests.csproj
+++ b/Messaging.Tests/04.Messaging.Tests.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Server\MessageProcessorBusTest.cs" />
     <Compile Include="Server\MessageProcessorStub.cs" />
     <Compile Include="Server\Modules\MessageValidationPipelineTest.cs" />
-    <Compile Include="Server\Modules\ObjectCacheManagerTest.cs" />
+    <Compile Include="Server\Modules\ObjectCacheControllerTest.cs" />
     <Compile Include="Server\Modules\QueryCacheModuleTest.cs" />
     <Compile Include="Server\Modules\QueryCacheOptionsAttributeTest.cs" />
     <Compile Include="Server\Modules\TransactionScopeModuleTest.cs" />
