--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -80,15 +80,16 @@
     <Compile Include="Server\DependencyAttribute.cs" />
     <Compile Include="Server\MessageHandler.T1.cs" />
     <Compile Include="Server\MessageSources.cs" />
-    <Compile Include="Server\Modules\IQueryCacheManager.cs" />
+    <Compile Include="Server\Modules\IQueryCacheController.cs" />
     <Compile Include="Server\Modules\MessageDispatcherModule.T1.cs" />
     <Compile Include="Server\Modules\MessageHandlerModuleAttribute.cs" />
     <Compile Include="Server\Modules\MessageHandlerModule.T2.cs" />
     <Compile Include="Server\Modules\MessageHandlerModule.T1.cs" />
     <Compile Include="Server\Modules\ObjectCacheManager.cs" />
+    <Compile Include="Server\Modules\ObjectCacheController.cs" />
     <Compile Include="Server\Modules\QueryCacheEntryMonitor.cs" />
     <Compile Include="Server\Modules\QueryCacheKind.cs" />
-    <Compile Include="Server\Modules\QueryCacheManager.cs" />
+    <Compile Include="Server\Modules\QueryCacheController.cs" />
     <Compile Include="Server\Modules\QueryCacheOptionsAttribute.cs" />
     <Compile Include="Server\Modules\QueryCacheModule.T2.cs" />
     <Compile Include="Server\Modules\QueryDispatcherModule.T1.cs" />
