--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -95,10 +95,12 @@
     <Compile Include="Server\Modules\QueryDispatcherModule.T1.cs" />
     <Compile Include="Server\Modules\QueryModule.T2.cs" />
     <Compile Include="Server\Modules\QueryModule.T3.cs" />
+    <Compile Include="Server\Modules\QueryRequestMessage.T1.cs" />
     <Compile Include="Server\Modules\TransactionScopeAttribute.cs" />
     <Compile Include="Server\Modules\TransactionScopeFactory.cs" />
     <Compile Include="Server\Modules\TransactionScopeModule.T1.cs" />
     <Compile Include="Server\Query.T2.cs" />
+    <Compile Include="Server\QueryExecutionOptions.cs" />
     <Compile Include="ValidationErrorTree.cs" />
     <Compile Include="RequestMessagePropertyChangedEventArgs.cs" />
     <Compile Include="Resources\ValidationMessages.Designer.cs">
