--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -63,9 +63,9 @@
     <Compile Include="Client\CommandExecutionTask.cs" />
     <Compile Include="Client\IAsyncExecutionTask.cs" />
     <Compile Include="Client\INotifyIsBusy.cs" />
-    <Compile Include="Client\ObjectCacheExtensions.cs" />
     <Compile Include="Client\QueryDelegate.T1.cs" />
     <Compile Include="Client\QueryDelegate.T2.cs" />
+    <Compile Include="Client\RequestMessage.cs" />
     <Compile Include="IMessage.cs" />
     <Compile Include="IMessageValidator.T1.cs" />
     <Compile Include="IRequestMessageViewModel.cs" />
