--- a/Messaging.Tests/04.Messaging.Tests.csproj
+++ b/Messaging.Tests/04.Messaging.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Server\MessageHandlerSpy.cs" />
     <Compile Include="Server\MessageProcessorBusTest.cs" />
     <Compile Include="Server\MessageProcessorStub.cs" />
+    <Compile Include="Server\Modules\MemoryCacheControllerTest.cs" />
     <Compile Include="Server\Modules\MessageValidationPipelineTest.cs" />
     <Compile Include="Server\Modules\ObjectCacheControllerTest.cs" />
     <Compile Include="Server\Modules\QueryCacheModuleTest.cs" />
