--- a/Messaging/05.Messaging.csproj
+++ b/Messaging/05.Messaging.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,29 +78,41 @@
     <Compile Include="FunctionalException.cs" />
     <Compile Include="ReadOnlyDictionary.T2.cs" />
     <Compile Include="RequestMessageViewModelEditScope.cs" />
+    <Compile Include="Server\Caching\CacheExpiredEventArgs.cs" />
     <Compile Include="Server\DependencyAttribute.cs" />
     <Compile Include="Server\MessageHandler.T1.cs" />
     <Compile Include="Server\MessageSources.cs" />
-    <Compile Include="Server\Modules\IQueryCacheController.cs" />
-    <Compile Include="Server\Modules\MemoryCacheController.cs" />
-    <Compile Include="Server\Modules\MessageDispatcherModule.T1.cs" />
-    <Compile Include="Server\Modules\MessageHandlerModuleAttribute.cs" />
-    <Compile Include="Server\Modules\MessageHandlerModule.T2.cs" />
-    <Compile Include="Server\Modules\MessageHandlerModule.T1.cs" />
-    <Compile Include="Server\Modules\ObjectCacheManager.cs" />
-    <Compile Include="Server\Modules\ObjectCacheController.cs" />
-    <Compile Include="Server\Modules\QueryCacheEntryMonitor.cs" />
-    <Compile Include="Server\Modules\QueryCacheKind.cs" />
-    <Compile Include="Server\Modules\QueryCacheController.cs" />
-    <Compile Include="Server\Modules\QueryCacheOptionsAttribute.cs" />
-    <Compile Include="Server\Modules\QueryCacheModule.T2.cs" />
-    <Compile Include="Server\Modules\QueryDispatcherModule.T1.cs" />
-    <Compile Include="Server\Modules\QueryModule.T2.cs" />
-    <Compile Include="Server\Modules\QueryModule.T3.cs" />
-    <Compile Include="Server\Modules\QueryRequestMessage.T1.cs" />
-    <Compile Include="Server\Modules\TransactionScopeAttribute.cs" />
-    <Compile Include="Server\Modules\TransactionScopeFactory.cs" />
-    <Compile Include="Server\Modules\TransactionScopeModule.T1.cs" />
+    <Compile Include="Server\Caching\AspNetApplicationCacheManager.cs" />
+    <Compile Include="Server\Caching\AspNetCacheProvider.cs" />
+    <Compile Include="Server\Caching\AspNetCacheManager.cs" />
+    <Compile Include="Server\Caching\AspNetSessionCacheManager.cs" />
+    <Compile Include="Server\Caching\CacheEntryDeletedEventArgs.cs" />
+    <Compile Include="Server\Caching\CacheEntryInsertedOrUpdatedEventArgs.cs" />
+    <Compile Include="Server\Caching\CacheEntry.cs" />
+    <Compile Include="Server\Caching\IQueryCacheManagerFactory.cs" />
+    <Compile Include="Server\Caching\IQueryCacheProvider.cs" />
+    <Compile Include="Server\Caching\MemoryCacheProvider.cs" />
+    <Compile Include="Server\MessageDispatcherModule.T1.cs" />
+    <Compile Include="Server\MessageHandlerModuleAttribute.cs" />
+    <Compile Include="Server\MessageHandlerModule.T2.cs" />
+    <Compile Include="Server\MessageHandlerModule.T1.cs" />
+    <Compile Include="Server\Caching\ObjectCacheEntry.cs" />
+    <Compile Include="Server\Caching\ObjectCacheManager.cs" />
+    <Compile Include="Server\Caching\ObjectCacheProvider.cs" />
+    <Compile Include="Server\Caching\ObjectCacheEntryMonitor.cs" />
+    <Compile Include="Server\Caching\QueryCacheKind.cs" />
+    <Compile Include="Server\Caching\QueryCacheManagerFactory.cs" />
+    <Compile Include="Server\Caching\QueryCacheProvider.cs" />
+    <Compile Include="Server\Caching\QueryCacheManager.cs" />
+    <Compile Include="Server\Caching\QueryCacheOptionsAttribute.cs" />
+    <Compile Include="Server\Caching\QueryCacheModule.T2.cs" />
+    <Compile Include="Server\QueryDispatcherModule.T1.cs" />
+    <Compile Include="Server\QueryModule.T2.cs" />
+    <Compile Include="Server\QueryModule.T3.cs" />
+    <Compile Include="Server\Caching\QueryCachePolicy.cs" />
+    <Compile Include="Server\TransactionScopeAttribute.cs" />
+    <Compile Include="Server\TransactionScopeFactory.cs" />
+    <Compile Include="Server\TransactionScopeModule.T1.cs" />
     <Compile Include="Server\Query.T2.cs" />
     <Compile Include="Server\QueryExecutionOptions.cs" />
     <Compile Include="ValidationErrorTree.cs" />
@@ -138,17 +151,17 @@
     <Compile Include="Server\FuncDecorator.T2.cs" />
     <Compile Include="Server\Domain\IAggregateVersion.T1.cs" />
     <Compile Include="Server\Domain\DateTimeVersion.cs" />
-    <Compile Include="Server\Modules\IMessageHandlerPipelineFactory.T1.cs" />
+    <Compile Include="Server\IMessageHandlerPipelineFactory.T1.cs" />
     <Compile Include="Server\IMessageProcessorBusConnection.cs" />
     <Compile Include="Server\Domain\Int64Version.cs" />
     <Compile Include="Server\IQuery.T2.cs" />
-    <Compile Include="Server\Modules\IQueryPipelineFactory.T2.cs" />
-    <Compile Include="Server\Modules\MessageHandlerPipelineFactory.T1.cs" />
-    <Compile Include="Server\Modules\MessageHandlerPipelineFactoryDecorator.T1.cs" />
+    <Compile Include="Server\IQueryPipelineFactory.T2.cs" />
+    <Compile Include="Server\MessageHandlerPipelineFactory.T1.cs" />
+    <Compile Include="Server\MessageHandlerPipelineFactoryDecorator.T1.cs" />
     <Compile Include="Server\PassThroughPipeline.T1.cs" />
-    <Compile Include="Server\Modules\MessageValidationModule.T1.cs" />
-    <Compile Include="Server\Modules\QueryPipelineFactory.T2.cs" />
-    <Compile Include="Server\Modules\QueryPipelineFactoryDecorator.T2.cs" />
+    <Compile Include="Server\MessageValidationModule.T1.cs" />
+    <Compile Include="Server\QueryPipelineFactory.T2.cs" />
+    <Compile Include="Server\QueryPipelineFactoryDecorator.T2.cs" />
     <Compile Include="Server\Domain\Repository.T3.cs" />
     <Compile Include="Server\Domain\Int32Version.cs" />
     <Compile Include="Server\Domain\DomainException.cs" />
@@ -180,7 +193,6 @@
     <Compile Include="ClockScope.cs" />
     <Compile Include="ClockWithOffset.cs" />
     <Compile Include="IClockContext.cs" />
-    <Compile Include="Server\Modules\ThreadNameModule.T1.cs" />
     <Compile Include="StaticClockContext.cs" />
     <Compile Include="StopwatchClock.cs" />
     <Compile Include="ThreadStaticClockContext.cs" />
@@ -234,6 +246,7 @@
     <None Include="04.Messaging.nuspec">
       <SubType>Designer</SubType>
     </None>
+    <Compile Include="Server\Caching\AspNetCacheEntryLifetime.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
